--- a/SQLiteOnly/SQLiteOnly.Android/packages.config
+++ b/SQLiteOnly/SQLiteOnly.Android/packages.config
@@ -3,11 +3,11 @@
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="monoandroid71" />
-  <package id="sqlite-net-pcl" version="1.3.1" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.2" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.2" targetFramework="monoandroid71" />
+  <package id="sqlite-net-pcl" version="1.3.3" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid80" />
   <package id="System.AppContext" version="4.1.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.0.11" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="monoandroid71" />
@@ -17,7 +17,7 @@
   <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="monoandroid71" />
   <package id="System.Globalization" version="4.0.11" targetFramework="monoandroid71" />
   <package id="System.Globalization.Calendars" version="4.0.1" targetFramework="monoandroid71" />
-  <package id="System.IO" version="4.1.0" targetFramework="monoandroid71" />
+  <package id="System.IO" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.IO.Compression" version="4.1.0" targetFramework="monoandroid71" />
   <package id="System.IO.Compression.ZipFile" version="4.0.1" targetFramework="monoandroid71" />
   <package id="System.IO.FileSystem" version="4.0.1" targetFramework="monoandroid71" />
@@ -50,13 +50,21 @@
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="monoandroid71" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Design" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Transition" version="25.4.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="monoandroid80" />
 </packages>
